Add missing videos

--- a/content/post/alfred-app.adoc
+++ b/content/post/alfred-app.adoc
@@ -20,9 +20,15 @@ I've used https://www.alfredapp.com/[Alfred] for years, and it's one of the firs
 
 _I wrote up a list of other link:/2021/07/29/my-favourite-tools-on-the-mac-setting-up-a-new-mac[Mac software that I use here]_
 
-* *Clipboard history*. Every time you ⌘-C what you copy goes onto the clipboard history, which you can search. So you can then paste not only the thing you just copied, but anything else you copied previously! It is *SO* powerful. It even works with images too! 
+* *Clipboard history*. Every time you ⌘-C what you copy goes onto the clipboard history, which you can search. So you can then paste not only the thing you just copied, but anything else you copied previously! It is *SO* powerful. 
 +
 video::/images/2021/06/alfred_clipboard_history.mp4[options="autoplay,loop,nocontrols"]
++
+It works with *images* too!
+video::/images/2021/06/alfred_imagepaste.mp4[options="autoplay,loop,nocontrols"]
+* *File search*. Not just file search, but *FILE SEARCH*! You can preview files, and even drag and drop them directly into an application
++
+video::/images/2021/06/alfred_imagedrag.mp4[options="autoplay,loop,nocontrols"]
 *  *Snippets*. Kinda like the clipboard history, and integrated with it too, you can predefine static or dynamic (e.g. date) text to paste into a target. Pretty handy when you don't want to memorise the exact name of each Kafka Connect converter class ;) 
 +
 video::/images/2021/06/alfred_snippets.mp4[options="autoplay,loop,nocontrols"]
