--- a/content/post/alfred-app.adoc
+++ b/content/post/alfred-app.adoc
@@ -25,10 +25,11 @@ _I wrote up a list of other link:/2021/07/29/my-favourite-tools-on-the-mac-setti
 video::/images/2021/06/alfred_clipboard_history.mp4[options="autoplay,loop,nocontrols"]
 +
 It works with *images* too!
-video::/images/2021/06/alfred_imagepaste.mp4[options="autoplay,loop,nocontrols"]
++
+video::/images/2021/06/alfred_imagepaste.mp4[width=640,options="autoplay,loop,nocontrols"]
 * *File search*. Not just file search, but *FILE SEARCH*! You can preview files, and even drag and drop them directly into an application
 +
-video::/images/2021/06/alfred_imagedrag.mp4[options="autoplay,loop,nocontrols"]
+video::/images/2021/06/alfred_imagedrag.mp4[width=640,options="autoplay,loop,nocontrols"]
 *  *Snippets*. Kinda like the clipboard history, and integrated with it too, you can predefine static or dynamic (e.g. date) text to paste into a target. Pretty handy when you don't want to memorise the exact name of each Kafka Connect converter class ;) 
 +
 video::/images/2021/06/alfred_snippets.mp4[options="autoplay,loop,nocontrols"]
