Add link out to nice article from Niels Berglund

--- a/content/post/kc-worker-gcp.adoc
+++ b/content/post/kc-worker-gcp.adoc
@@ -53,6 +53,7 @@ Ultimately, Kafka Connect workers are just JVM processes. You can deploy on bare
 
 In this article I'm going to look at the latter of these -- Docker. 
 
+> See also a nice write-up from Niels Berglund : *https://nielsberglund.com/2021/09/06/run-self-managed-kusto-kafka-connector-serverless-in-azure-container-instances/[Run Self-Managed Kusto Kafka Connector Serverless in Azure Container Instances]*
 
 == Running Kafka Connect from Docker Compose, connecting to Confluent Cloud
 
