Change to noti.st

--- a/content/post/preparing-a-new-talk.adoc
+++ b/content/post/preparing-a-new-talk.adoc
@@ -123,6 +123,6 @@ Day of the conference!
 
 '''
 
-You can download the slides from https://speakerdeck.com/rmoff/the-changing-face-of-etl-event-driven-architectures-for-data-engineers[SpeakerDeck]
+You can download the slides from https://talks.rmoff.net/GGzp87/the-changing-face-of-etl-event-driven-architectures-for-data-engineers[my talks site]
 
-image::/images/2019/03/2019-03-01_22-49-35.png[link="https://speakerdeck.com/rmoff/the-changing-face-of-etl-event-driven-architectures-for-data-engineers"]
+image::/images/2019/03/2019-03-01_22-49-35.png[link="https://talks.rmoff.net/GGzp87/the-changing-face-of-etl-event-driven-architectures-for-data-engineers"]
