Update local build instructions

--- a/README.adoc
+++ b/README.adoc
@@ -6,5 +6,28 @@ This is the source for https://rmoff.net, built using Hugo and hosted via GitHub
 
 == Running locally
 
-`brew install asciidoctor asciidoc hugo`
-`hugo --buildDrafts server`
+[source,bash]
+----
+docker run --rm -it \ 
+  -v $(pwd):/src \ 
+  -p 1313:1313 \ 
+  klakegg/hugo:0.82.1-ext-asciidoctor-onbuild \
+  server
+----
+
+== Broken theme
+
+The theme used (https://github.com/xaprb/story[story]) is no longer maintained, and is broken with the latest version of Hugo (`0.96.0`). It may be broken with earlier versions too (I've not built it for a while). It does work with `0.82.1``.
+
+[source,bash]
+----
+hugo v0.96.0+extended darwin/amd64 BuildDate=unknown
+ERROR 2022/04/01 11:15:15 render of "page" failed: "/Users/rmoff/git/rmoff-blog/themes/story/layouts/_default/baseof.html:12:10": execute of template failed: template: _default/single.html:12:10: executing "_default/single.html" at <.Hugo.Generator>: can't evaluate field Hugo in type *hugolib.pageState
+ERROR 2022/04/01 11:15:15 render of "page" failed: "/Users/rmoff/git/rmoff-blog/themes/story/layouts/_default/baseof.html:12:10": execute of template failed: template: _default/single.html:12:10: executing "_default/single.html" at <.Hugo.Generator>: can't evaluate field Hugo in type *hugolib.pageState
+ERROR 2022/04/01 11:15:15 render of "page" failed: "/Users/rmoff/git/rmoff-blog/themes/story/layouts/_default/baseof.html:12:10": execute of template failed: template: _default/single.html:12:10: executing "_default/single.html" at <.Hugo.Generator>: can't evaluate field Hugo in type *hugolib.pageState
+ERROR 2022/04/01 11:15:15 render of "page" failed: "/Users/rmoff/git/rmoff-blog/themes/story/layouts/_default/baseof.html:12:10": execute of template failed: template: _default/single.html:12:10: executing "_default/single.html" at <.Hugo.Generator>: can't evaluate field Hugo in type *hugolib.pageState
+Error: Error building site: failed to render pages: render of "page" failed: "/Users/rmoff/git/rmoff-blog/themes/story/layouts/_default/baseof.html:12:10": execute of template failed: template: _default/single.html:12:10: executing "_default/single.html" at <.Hugo.Generator>: can't evaluate field Hugo in type *hugolib.pageState
+Built in 1800 ms
+----
+
+I found this https://discourse.gohugo.io/t/cant-evaluate-field-hugo-in-hugolib-pagestate/37862/3[relevant thread] but don't understand enough about Hugo and its themes to do anything other than hack around…so instead I'm just hard-coding my dependence back to 0.82 and leaving it there. Maybe at some point I'll try out a new theme (yak shaving when I should be doing something else ;-) )
