Added some more thoughts

--- a/content/post/quick-thoughts-on-not-making-a-crap-slide-deck.adoc
+++ b/content/post/quick-thoughts-on-not-making-a-crap-slide-deck.adoc
@@ -109,3 +109,16 @@ _Two years on from writing this original article, I took to Twitter to voice mor
 
 <blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">bonus tweet - <a href="https://twitter.com/lornajane?ref_src=twsrc%5Etfw">@lornajane</a> reminded me of the very appropriate quotation that can be equally applied to the contents of slides: <br><br>“I apologize for such a long letter - I didn&#39;t have time to write a short one.”</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372915943383371776?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 ++++
+
+== Addenda (Apr 2022)
+
+* If you Twitter, put your Twitter handle on *every* slide.
+** Some people in the audience will like to tweet "Watching <x> talk about <y>" and having your handle on the title slide helps them.
+** Some people will like a particular slide that you created and will want to tweet that - if it's got your handle on it then they can easily attribute it to you and anyone seeing the tweet sees your handle on it too even if they don't tag you.
+
+* Part of the benefit of the live conference experience for attendees is being able to ask questions, so plan to allow 5-10 minutes for questions.
+
+* A **_very_** rough rule of thumb is one slide per minute. So if you're going to speak for 35 minutes and have 80 slides, +++<del>+++just speak really fast+++</del>+++ consider trimming them down 
+
+* Always remember what your talk title and abstract are. This is what you pitched to the program committee who accepted your talk on that basis, and it's what the audience will have read in the agenda and chosen to attend your session based on. 
+** This can be useful to refocus a slide deck that's maybe getting long or a bit woolly. Chuck out the kitchen sink, maybe ditch some of the preamble, and focus on the story/learnings/insights that you've promised to share :)
