--- a/README.adoc
+++ b/README.adoc
@@ -8,11 +8,11 @@ This is the source for https://rmoff.net, built using Hugo and hosted via GitHub
 
 [source,bash]
 ----
-docker run --rm -it \ 
-  -v $(pwd):/src \ 
-  -p 1313:1313 \ 
-  klakegg/hugo:0.82.1-ext-asciidoctor-onbuild \
-  server
+docker run --rm -it \
+  -v $(pwd):/src \
+  -p 1313:1313 \
+  klakegg/hugo:0.85.0-asciidoctor-onbuild \
+  server --buildFuture --buildDrafts
 ----
 
 == Broken theme
