--- a/content/post/ksl22_run.adoc
+++ b/content/post/ksl22_run.adoc
@@ -26,9 +26,9 @@ categories:
 * _Who_:  Anyone who would like to is very welcome :) 
 * _What_: A 5k (3.1 miles) run or walk from the conference hotel around the Greenwich Peninsula 
 * _Where_: Starting from the conference hotel (https://g.page/intercontheo2?share[InterContinental London - the O2])
-* _When_: **Monday 25th April, 07:00 BST**
+* _When_: **Monday 25th April**. 
 
-We'll meet out on the riverside `Olympian Way` path nearest to where you can reach it from the hotel, take some https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20until%3A2020-03-01&src=typed_query&f=live[`#streamingselfie`]s if you want them, and then make our way around the https://www.strava.com/routes/2946047541640795770[the 5k route]. 
+We'll **meet at 07:00 BST** out on the riverside `Olympian Way` path nearest to where you can reach it from the hotel. That'll give us time to congrgate and take some https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20until%3A2020-03-01&src=typed_query&f=live[`#streamingselfie`]s if you want them, before setting off at 07:10 sharp to make our way around the https://www.strava.com/routes/2946047541640795770[the 5k route]. 
 
 image::/images/2022/04/o2_run.jpg[]
 
