--- a/content/post/ksl22_run.adoc
+++ b/content/post/ksl22_run.adoc
@@ -15,7 +15,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-**https://www.myeventi.events/kafka22/gb/[Kafka Summit London] IS BACK**! After COVID spoiled everyone's fun and fundamentally screwed everything up for the past two years, I cannot wait to be back at an in-person conference. At the last Kafka Summit in the beforetimes (San Francisco, 2019) some of us got together for a run (or walk) across the GoldenGate bridge. I can't promise quite the same views, but I thought it would be fun to do something similar when we meet in London later this month. 
+**https://www.myeventi.events/kafka22/gb/[Kafka Summit London] IS BACK**! After COVID spoiled everyone's fun and fundamentally screwed everything up for the past two years, I cannot wait to be back at an in-person conference. At the last Kafka Summit in the beforetimes (San Francisco, 2019) https://twitter.com/rmoff/status/1179047181891883008[some of us] got together for a link:/2019/09/23/kafka-summit-goldengate-bridge-run/walk/[run (or walk) across the GoldenGate bridge]. I can't promise quite the same views, but I thought it would be fun to do something similar when we meet in London later this month. 
 
 <!--more-->
 
