--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -128,7 +128,7 @@ These break down as follows:
 
 * `repository.owner`: `rmoff`
 * `repository.name`: `rmoff-blog`
-* `job.name`: This is the value of `name` in the YAML that defines the Workflow. 
+* `job.name`: This is the name of the job, specified under `jobs:` in the YAML that defines the Workflow. 
 * `pr.number`: The PR number, which can be obtained from a variable in the workflow. 
 
 I'm stealing https://github.com/gunnarmorling/morling.dev/blob/master/.github/workflows/preview.yml#L17[Gunnar's nice bit of code] here to determine the PR number: 
@@ -142,7 +142,7 @@ Using that I can then build the BASEURL which gets passed to Hugo shortly
 
 [source,bash]
 ----
-export BASEURL = "https://rmoff-rmoff-blog-blog-pr-preview-'"$PRNUMBER"'.surge.sh/"
+export BASEURL = "https://rmoff-rmoff-blog-preview-pr-'"$PRNUMBER"'.surge.sh/"
 ----
 
 === Build the Hugo site
@@ -168,10 +168,8 @@ This action deploys the built site (under `/public`) from the previous step to s
           echo Deploying to surge.sh
 ----
 
-
-
-
-
 == The finished workflow
 
 << embed from live >>
+
+Put this YAML in a file under `.git`
