--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -147,11 +147,11 @@ export BASEURL = "https://rmoff-rmoff-blog-preview-pr-'"$PRNUMBER"'.surge.sh/"
 
 === Build the Hugo site
 
-Install of simply `hugo` which builds the site, we add a few command line flags to build draft posts, future-dated posts, and also change the base URL which by default (per the https://github.com/rmoff/rmoff-blog/blob/master/config.yaml[`config.yaml`]) is the live site (`rmoff.net`). 
+Install of simply `hugo` which builds the site, we add a few command line flags to build draft posts (`--buildDrafts`), future-dated posts (`--buildFuture`), and also change the base URL (`--baseURL`) which by default (per the https://github.com/rmoff/rmoff-blog/blob/master/config.yaml[`config.yaml`]) is the live site (`rmoff.net`). If the base URL is incorrectly set the resulting built site won't render properly. 
 
 === Deploying the built site to surge.sh
 
-This action deploys the built site (under `/public`) from the previous step to surge.sh: 
+https://github.com/afc163/surge-preview[This action] deploys the built site (under `/public`) from the previous step to surge.sh: 
 
 [source,yaml]
 ----
@@ -170,6 +170,22 @@ This action deploys the built site (under `/public`) from the previous step to s
 
 == The finished workflow
 
-<< embed from live >>
+[source,yaml]
+----
+include::https://raw.githubusercontent.com/rmoff/rmoff-blog/master/.github/workflows/preview-blog.yaml[]
+----
 
-Put this YAML in a file under `.git`
+Put this YAML in a file in your github repository root folder under `.github/workflows/`
+
+== The workflow in action
+
+1. Create a branch of the master branch, into which you will commit a new blog post
++
+[source,bash]
+----
+git checkout -b my_new_article
+----
+
+2. Start writing your blog. Once it's ready to publish as a draft, commit it: 
++
+
