Nearly finished the article...

--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -1,6 +1,6 @@
 ---
 draft: true
-title: 'Using GitHub Actions to build automagic Hugo previews'
+title: 'Using GitHub Actions to build automagic Hugo previews of draft articles'
 date: "2022-04-05T20:35:13Z"
 image: "/images/2022/04/"
 thumbnail: "/images/2022/04/"
@@ -147,7 +147,9 @@ export BASEURL = "https://rmoff-rmoff-blog-preview-pr-'"$PRNUMBER"'.surge.sh/"
 
 === Build the Hugo site
 
-Install of simply `hugo` which builds the site, we add a few command line flags to build draft posts (`--buildDrafts`), future-dated posts (`--buildFuture`), and also change the base URL (`--baseURL`) which by default (per the https://github.com/rmoff/rmoff-blog/blob/master/config.yaml[`config.yaml`]) is the live site (`rmoff.net`). If the base URL is incorrectly set the resulting built site won't render properly. 
+Install of simply `hugo` which builds the site, we add a few command line flags to build draft posts (`--buildDrafts`), future-dated posts (`--buildFuture`), and also change the base URL (`--baseURL`) which by default (per the https://github.com/rmoff/rmoff-blog/blob/master/config.yaml[`config.yaml`]) is the live site (`rmoff.net`). 
+
+If the base URL is incorrectly set the resulting built site won't render properly - you'll get missing CSS files, weird relative links, etc. 
 
 === Deploying the built site to surge.sh
 
@@ -186,6 +188,29 @@ Put this YAML in a file in your github repository root folder under `.github/wor
 git checkout -b my_new_article
 ----
 
-2. Start writing your blog. Once it's ready to publish as a draft, commit it: 
+2. Start writing your blog. Once it's ready to publish as a draft, commit it and push to GitHub: 
 +
+[source,bash]
+----
+git add content/post/never_gonna_give_you_up.adoc
+git commit -m "Draft ready for review"
+git push --set-upstream origin my_new_article
+----
 
+3. Create a PR from the new branch
++
+image::/images/2022/04/pr1.png[]
++
+image::/images/2022/04/pr2.png[]
++
+When you create the PR you'll notice that a check has been added to it - this is the Action that's configured by the workflow and triggered by the PR being created
++
+image::/images/2022/04/pr2a.png[]
+
+4. As the action runs you'll see it update the PR with its status, and then a completion message including the URL to which the preview has been uploaded
++
+image::/images/2022/04/pr4.png[]
+
+5. Bask in the glory of a nice preview of your new article, whilst safely not impinging upon your live site. 
++
+image::/images/2022/04/preview.png[]
