--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -19,7 +19,7 @@ This blog is written in Asciidoc, built using Hugo, and hosted on GitHub Pages. 
 
 <!--more-->
 
-I link:/2020/12/20/scheduling-hugo-builds-on-github-pages-with-github-actions/[wrote previously] about using GitHub Actions to automagically build and deploy my blog whenever I push new content to the GitHub repo that hosts the source. My friend https://twitter.com/gunnarmorling[Gunnar Morling] does not only that with https://www.morling.dev/[his blog], but also a neat preview functionality for new content in a Pull Request (PR). I'm writing this blog to document the steps I took to mimic https://github.com/gunnarmorling/morling.dev/blob/master/.github/workflows/preview.yml[his setup] :) 
+I link:/2020/12/20/scheduling-hugo-builds-on-github-pages-with-github-actions/[wrote previously] about using GitHub Actions to automagically build and deploy my blog whenever I push new content to the GitHub repo that hosts the source. My friend https://twitter.com/gunnarmorling[Gunnar Morling] does not only do that with https://www.morling.dev/[his blog], but he also has a neat preview functionality for new content in a Pull Request (PR). I'm writing this blog to document the steps I took to mimic https://github.com/gunnarmorling/morling.dev/blob/master/.github/workflows/preview.yml[his setup] :) 
 
 In essence it's the same as link:/2020/12/20/scheduling-hugo-builds-on-github-pages-with-github-actions/[deploying the production Hugo site to GitHub Pages], except it's hosted on https://surge.sh/[`https://surge.sh/`] instead and with a variable URL (since you might have multiple drafts each with their own PR). 
 
