--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -145,7 +145,7 @@ Note that `export` works locally to a step, but to pass the variable between ste
 
 === Build the Hugo site
 
-Install of simply `hugo` which builds the site, we add a few command line flags to build draft posts (`--buildDrafts`), future-dated posts (`--buildFuture`), and also change the base URL (`--baseURL`) which by default (per the https://github.com/rmoff/rmoff-blog/blob/master/config.yaml[`config.yaml`]) is the live site (`rmoff.net`). 
+Instead of simply calling `hugo` which builds the site, we add a few command line flags to build draft posts (`--buildDrafts`), future-dated posts (`--buildFuture`), and also change the base URL (`--baseURL`) which by default (per the https://github.com/rmoff/rmoff-blog/blob/master/config.yaml[`config.yaml`]) is the live site (`rmoff.net`). 
 
 Note that if the base URL is incorrectly set the resulting built site won't render properly - you'll get missing CSS files, weird relative links, etc. 
 
