--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -195,7 +195,7 @@ git commit -m "Draft ready for review"
 git push --set-upstream origin my_new_article
 ----
 
-3. Create a PR from the new branch
+3. Create a PR from the new branch:
 +
 image::/images/2022/04/pr1.png[]
 +
