--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -201,7 +201,7 @@ image::/images/2022/04/pr1.png[]
 +
 image::/images/2022/04/pr2.png[]
 +
-When you create the PR you'll notice that a check has been added to it - this is the Action that's configured by the workflow and triggered by the PR being created
+When you create the PR you'll notice that a check has been added to it - this is the action that's configured by the workflow and triggered by the PR being created
 +
 image::/images/2022/04/pr2a.png[]
 
