--- a/content/post/hugo_ga_preview.adoc
+++ b/content/post/hugo_ga_preview.adoc
@@ -179,7 +179,7 @@ Put this YAML in a file in your github repository root folder under `.github/wor
 
 == The workflow in action
 
-1. Create a branch of the master branch, into which you will commit a new blog post
+1. Create a branch of the main branch, into which you will commit a new blog post:
 +
 [source,bash]
 ----
