remove dead link

--- a/content/post/da_hanging_up_my_boarding_passes.adoc
+++ b/content/post/da_hanging_up_my_boarding_passes.adoc
@@ -54,4 +54,6 @@ I do recognise that some people would _love_ to be at home but _have_ to be on t
 
 *So what now*? Can I even call myself a Developer Advocate once my airline status has dropped from platinum, my conference swag wardrobe has faded into threads in the wash, and I occassionally join the gibbering masses flailing around at security whilst the practised professionals tut quietly behind me? 
 
-Read my link:/2022/04/04/remote-first-developer-advocacy/[next post] to see what I think that it means to be a Developer Advocate and not travel.
+Stay tuned for my next post to see what I think that it means to be a Developer Advocate and not travel.
+
+<!-- Read my link:/2022/04/04/remote-first-developer-advocacy/[next post] to see what I think that it means to be a Developer Advocate and not travel. -->
