Add note re. rename

--- a/content/post/install-kafkacat-fedora.adoc
+++ b/content/post/install-kafkacat-fedora.adoc
@@ -11,6 +11,8 @@ categories:
 
 https://github.com/edenhill/kafkacat[kafkacat] is one of my go-to tools when working with Kafka. It's a producer and consumer, but also a swiss-army knife of debugging and troubleshooting capabilities. So when I built a new Fedora server recently, I needed to get it installed. Unfortunately there's no pre-packed install available on `yum`, so here's how to do it manually. 
 
+NOTE: `kafkacat` is now known as `kcat` (https://github.com/edenhill/kcat/pull/339[ref]). When invoking the command you will need to use *`kcat`* in place of `kafkacat`.
+
 == Pre-requisite installs
 
 We'll need some packages from the Confluent repo so set this up for `yum` first by creating `/etc/yum.repos.d/confluent.repo`: 
@@ -93,6 +95,8 @@ Metadata for all topics (from broker 3: localhost:29092/3):
   broker 3 at localhost:29092 (controller)
   broker 1 at localhost:9092
 {{< /highlight >}}
+
+NOTE: `kafkacat` is now known as `kcat` (https://github.com/edenhill/kcat/pull/339[ref]). When invoking the command you will need to use *`kcat`* in place of `kafkacat`.
 
 == This all seems like too much hassle? 
 
