--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,16 @@ docker run --rm -it \
   server --buildFuture --buildDrafts
 ----
 
+== Creating a new post
+
+[source,bash]
+----
+docker run --rm -it \
+  -v $(pwd):/src \
+  klakegg/hugo:0.85.0-asciidoctor-onbuild \
+  new content/post/my_new_post.adoc
+----
+
 == Broken theme
 
 The theme used (https://github.com/xaprb/story[story]) is no longer maintained, and is broken with the latest version of Hugo (`0.96.0`). It may be broken with earlier versions too (I've not built it for a while). It does work with `0.82.1``.
