--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: 'How to Write a Good Tech Conference Abstract - Learn from the Mistakes of Others'
 date: "2022-07-20T08:58:38Z"
 image: "/images/2022/07/DJI_0639.jpeg"
