--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -22,8 +22,9 @@ There were some common patterns I saw, and I thought it would be useful to share
 
 <!--more-->
 
-## Don’t be too smart for your own good. Fancy titles alone don’t suffice. 
+Here are some of the headline mistakes that I've seen made, along with the quoted comments from the program committee when the reviewed the abstract in question…
 
+## Don’t be too smart for your own good. Fancy titles alone don’t suffice. 
 
 > Unclear what it is about. Speakers got lost in the nice allegory, completely missing the actual core content.
 
